--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
+  @apply font-sans bg-bgLight text-textDark;
   font-family: 'Poppins', sans-serif;
-  background-color: #f5f8fd;
-  color: #16171a;
 }
 html {
   scroll-behavior: smooth;
